[gd_scene load_steps=7 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MenuChooseSkin.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=2]
action = "start_game"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the Creeps!"
align = 1
autowrap = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -110.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"

[node name="ChoosePlayerSkin" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -214.5
margin_top = -100.0
margin_right = 214.5
margin_bottom = -50.0
custom_fonts/font = SubResource( 1 )
text = "Choose Skin"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MenuChooseSkin" parent="." instance=ExtResource( 3 )]
visible = false

[node name="BestScore" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -70.0
margin_top = 10.0
margin_right = -8.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "BS"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ChoosePlayerSkin" to="." method="_on_ChoosePlayerSkin_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="choose_grey" from="MenuChooseSkin" to="." method="_on_MenuChooseSkin_choose_grey"]
[connection signal="choose_red" from="MenuChooseSkin" to="." method="_on_MenuChooseSkin_choose_red"]
[connection signal="pressed" from="BestScore" to="." method="_on_BestScore_pressed"]
